# gn-playground

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gn  .ruff.toml  BUILD.gn  README.rst  ruff.toml
.github/workflows/: build.yaml
docker/: Makefile  docker-compose.yaml
docker/archlinux-build/: Dockerfile
docs/: c-coding-style-guide.rst  python-coding-style-guide.rst
gn/: BUILD.gn  README.rst  outputs.gni  vars.gni
gn/ack/: BUILD.gn  update-mtime.py
gn/action/: action.gni  invoke-action.py
gn/actions/: capture-output.gni  check-compilation-database.gni  check-compile-commands.gni  check-sources.gni  description.gni  install.gni  python-action.gni
gn/binary/: binary.gni
gn/capture-output/: capture-output.gni  capture-output.py
gn/ccache/: ccache.gni
gn/clang-format/: BUILD.gn  invoke-clang-format.py  make-build.py
gn/clang-tidy/: BUILD.gn  clang-tidy.gni  dispatch-diagnostics.py  invoke-clang-tidy.py  vars.gni
gn/compile-commands/: BUILD.gn  check-compile-commands-available.py  check-compile-commands.py
gn/component/: component.gni  stub-component.py.txt
gn/conan/: conanfile.py  profile
gn/conan/zlib/: BUILD.gn
gn/config/: BUILDCONFIG.gn
gn/data/: stubs.gni
gn/dependencies/: BUILD.gn  build.jinja2  convert-dependencies.py  convert-deps.py  generate-scan-build.py  make-build.py  transform-dependencies.py
gn/description/: BUILD.gn  dispatch-description.py
gn/docs/: checks.rst  component-integration.rst  component.rst  style-guide.rst  unittest.rst  use-cases.rst
gn/echo/: echo.gni  echo.py
gn/git/: BUILD.gn  check-extensions.py  pre-commit.yaml
gn/import/: config.gni  utils.gni
gn/includes/: BUILD.gn  check-include-directories.py  make-build.py
gn/interface/: interface.gni
gn/jinja2/: jinja2.gni  render-template.py
gn/memmaps/: BUILD.gn  check-memmaps.py  memmaps.gni
gn/metadata/: BUILD.gn  check-metadata-available.py  check-metadata-schema.py  check-metadata.py  extract-metadata.py  metadata-schema.json  pyproject.toml
gn/ninja/: ninja.gni
gn/python/: BUILD.gn  check-paths.py  env-file.gni  mk-env.py  python-module.gni  python.gni  uvx.gni  vars.gni
gn/python/scripts/: check-description-target.py  copy.py
gn/rstcheck/: BUILD.gn
gn/scripts/: capture-output.py  check-compile-commands.py  check-memmaps.py  check-sources.py  convert-gndesc.py  copy.py  dep2j.py  mkvfs.py  remove.py  render-jinja2.py  update-mtime.py
gn/sources/: select-sources.py  sources.gni
gn/target-decls/: binary.gni  clang-tidy.gni  component.gni  printf-action.gni  unittest.gni
gn/targets/: BUILD.gn  binary.gni  check-targets.py  component.gni  unittest.gni
gn/toolchain/embedded/: BUILD.gn
gn/toolchain/host/: BUILD.gn
gn/toolchains/: .ninja_log  BUILD.gn  gcc-toolchain.gni  generic-toolchain.gni  install.ninja  tools.gni
gn/toolchains/clang/: BUILD.gn  clang-tidy-sources.py  memmaps.gni  mk-vfs.py  mkvfs.py  vars.gni
gn/toolchains/decls/: clang-toolchain.gni  gcc-toolchain.gni  generic-gcc-toolchain.gni  generic-toolchain.gni
gn/toolchains/embedded/: BUILD.gn
gn/toolchains/gcc/: BUILD.gn
gn/toolchains/host/: BUILD.gn
gn/toolchains/templates/: clang-toolchain.gni  gcc-toolchain.gni  generic-gcc-toolchain.gni  generic-toolchain.gni
gn/unittest/: BUILD.gn  check-unittest-active.py  check-unittest-available.py  check-unittests.py  unittest.gni
gn/util/: install-tool.gni
scripts/: build-selective.py
src/: BUILD.gn  main.c
src/core/: BUILD.gn  core.c  core.h
src/drivers/: BUILD.gn  drivers.c  drivers.h
src/init/: BUILD.gn  init.S  init.h
src/io/: BUILD.gn  io-read.h  io.c  io.h
src/utils/: BUILD.gn  utils.c  utils.h
test/: BUILD.gn  test-core.cpp  test-drivers.cpp  test-init.cpp  test-io.cpp  test-main.cpp  test-utils.cpp
tools/git/hooks/: pre-commit
tools/pre-commit/: config.yaml  invoke-clang-tidy-target.py  invoke-ninja.py
