#
# The MIT License (MIT)
#
# Copyright (c) 2025-2026  Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

if (!is_ci_env && current_toolchain == default_toolchain) {
  _ninja_args = [
    "-C",
    rebase_path("//gn/toolchains"),
    "-f",
    "install.ninja",
  ]

  _file_deps = [
    "//gn/conan/conanfile.py",
    "//gn/conan/profile",
    "//gn/toolchains/install.ninja",
  ]

  print("Tool installation. This might take a while...")
  _output = exec_script(ninja_tool, _ninja_args, "trim string", _file_deps)
  print(_output)
}

group("clang-format") {
  testonly = true
  deps = [ "//gn/clang-format" ]
}

group("clang-tidy") {
  testonly = true
  deps = [ "//gn/clang-tidy" ]
}

group("unittest") {
  testonly = true
  deps = [ "//test:unittest" ]
}

group("check") {
  testonly = true
  deps = [
    "//gn/clang-format:check",
    "//gn/compile-commands:check",
    "//gn/git:check",
    "//gn/includes:check",
    "//gn/memmaps:check",
    "//gn/metadata:check",
    "//gn/python:check",
    "//gn/rstcheck:check",
    "//gn/targets:check",
    "//gn/unittest:check",
  ]
}

group("default") {
  deps = [ "//src:app(//gn/toolchains/gcc)" ]
}

pool("console") {
  depth = 1
}
