#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

# FIXME: structure outputs with scopes
# FIXME: provide a list and singular value for convenience in outputs.gni

import("//gn/outputs.gni")
import("//gn/actions/check-sources.gni")
import("//gn/actions/install.gni")

if (current_toolchain == default_toolchain) {
  ninja_args = [
    "-C",
    rebase_path("//gn/toolchains"),
    "-f",
    "install.ninja",
  ]

  file_deps = [ "//gn/toolchains/install.ninja" ]

  print("Tool installation. This might take a while...")
  output = exec_script(ninja_tool, ninja_args, "trim string", file_deps)
  print(output)
}

group("unittest") {
  testonly = true
  deps = [
    "//test:unittest-drivers-execute",
    "//test:unittest-init-execute",
    "//test:unittest-io-execute",
  ]
}

group("unittest-coverage") {
  testonly = true
  deps = [
    "//test:unittest-drivers-coverage",
    "//test:unittest-init-coverage",
    "//test:unittest-io-coverage",
  ]
}

group("clang-tidy") {
  testonly = true
  deps = [
    "//src:clang-tidy-core",
    "//src:clang-tidy-io",
    "//src:clang-tidy-drivers",
    "//src:clang-tidy-utils",
  ]
}

group("check-all") {
  testonly = true
  deps = [
    ":check-sources-project",
    ":gn-check",
    ":unittest-coverage",
    "//gn:check-compile-commands",
    "//gn:description",
#    "//gn:check-memmaps",
  ]
}

# Build the executable for both toolchains
group("default") {
    deps = [ "//src:app(//gn/toolchains/gcc)" ]
}

action("gn-check") {
  testonly = true
  script = gn_tool
  args = [
    "check",
    rebase_path("${root_build_dir}"),
  ]
  inputs = ack_outputs
  deps = [ "//gn:ack" ]
  outputs = [ "${target_out_dir}/non-existant" ]
}

# This target is only used to trivially instantiate targets for which
# we want to export the related compile commands in the dotfile.
group("compile-commands") {
  testonly = true
  deps = [
    ":unittest",
    "//src:app(//gn/toolchains/clang)",
  ]
}

# FIXME: switch to clang-scan-deps, remove :default and :unittest deps
check_sources("check-sources-project") {
  targets = [
    "//src:*(//gn/toolchains/gcc)",
    "//test:*",
  ]

  inputs = ack_outputs

  deps = [
    "//gn:ack",

    # Ninja will only know the dependencies once the related targets
    # have been built. Maybe clang-scan-deps is still the better option.
    ":default",
    ":unittest",
  ]

  skip = [
    # System headers
    "/usr/include/*",
    "/usr/lib/*",

    # Stubs
    rebase_path("${root_build_dir}/**/drivers.h"),
    rebase_path("${root_build_dir}/**/io.h"),
  ]
}



#input = "$root_build_dir/stub-config.json"
#args = []
#args = [
#    "run",
#    rebase_path("//gn/scripts/mkvfs.py"),
#    "--config",
#    rebase_path(input),
#]
#
#file_deps = []
##file_deps = [
##    "//gn/scripts/mkvfs.py",
##    "$root_build_dir/stub-config.json",
##]
#
#print(exec_script(uv_tool, args, "trim string", file_deps))


