#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

# Make the targets unique to the default toolchain and ensure that the path
# to the outputs are always the same independant of the current toolchain.
# Always use a list to represent outputs to make it easier for other
# targets to use them.

ack_target = "//gn/ack:ack($default_toolchain)"
ack_outputs = [ "$root_build_dir/gen/gn.ack" ]

dependencies_target = "//gn/dependencies:dependencies($default_toolchain)"
dependencies_outputs = [ "$root_build_dir/gen/dependencies.json" ]

description_target = "//gn/description:description($default_toolchain)"
description_outputs = [ "$root_build_dir/gen/description.json" ]

metadata_target = "//gn/metadata:metadata($default_toolchain)"
metadata_outputs = [ "$root_build_dir/gen/metadata.json" ]
