#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/targets/binary.gni")
import("//gn/targets/component.gni")

config("monolithic-app-config") {
  defines = [ "MONOLITHIC_APP" ]
  cflags = [
    "-pedantic",
    "-Wall",
    "-Wextra",
    "-Werror",
    "-O2",
    "-fdata-sections",
    "-ffunction-sections",
  ]
  ldflags = [
    "-O2",
    "-fdata-sections",
    "-ffunction-sections",
  ]
}

binary("monolithic-app") {
  sources = [
    "core/core.c",
    "core/core.h",
    "drivers/drivers.c",
    "drivers/drivers.h",
    "init/init.S",
    "init/init.h",
    "io/io.c",
    "io/io.h",
    "main.c",
    "utils/utils.c",
    "utils/utils.h",
  ]
  public = [
    "core/core.h",
    "drivers/drivers.h",
    "init/init.h",
    "io/io.h",
    "utils/utils.h",
  ]
  include_dirs = [
    "core",
    "drivers",
    "init",
    "io",
    "utils",
  ]
  configs = [ ":monolithic-app-config" ]
  tags = ""
}

group("modular-app-deps") {
  deps = [
    ":core",
    ":drivers",
    ":init",
    ":io",
    ":utils",
  ]
}

config("modular-app-config") {
  defines = [ "MODULAR_APP" ]
  cflags = [
    "-pedantic",
    "-Wall",
    "-Wextra",
    "-Werror",
    "-O2",
    "-fdata-sections",
    "-ffunction-sections",
  ]
  ldflags = [
    "-O2",
    "-fdata-sections",
    "-ffunction-sections",
  ]
}

binary("modular-app") {
    deps = [ ":main" ]
  configs = [ ":modular-app-config" ]
  tags = "Hyperion"
}

component("main") {
  sources = [ "main.c" ]
  deps = [
    ":core",
    ":drivers",
    ":init",
    ":io",
    ":utils",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Mimas"
}

component("core") {
  sources = [
    "core/core.c",
    "core/core.h",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Titan"
}

component("drivers") {
  sources = [
    "drivers/drivers.c",
    "drivers/drivers.h",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Rhea"
}

component("init") {
  sources = [
    "init/init.S",
    "init/init.h",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Dione"
}

component("io") {
  sources = [
    "io/io.c",
    "io/io.h",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Tethys"
}

component("utils") {
  sources = [
    "utils/utils.c",
    "utils/utils.h",
  ]
  configs = [ ":modular-app-config" ]
  tags = "Enceladus"
}

