#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/unittest/unittest.gni")

unittest("main") {
  validates = "//src:app@main"
  sources = [ "//test/test-main.cpp" ]
  line_coverage = "100"
  branch_coverage = "100"
}

unittest("init") {
  validates = "//src/init:init@init"
  sources = [ "//test/test-init.cpp" ]
  enable_gcovr = false
}

unittest("io") {
  validates = "//src/io:io@io"
  sources = [ "//test/test-io.cpp" ]
  line_coverage = "100"
  branch_coverage = "100"
}

unittest("drivers") {
  validates = "//src/drivers:drivers@drivers"
  sources = [ "//test/test-drivers.cpp" ]
  line_coverage = "100"
  branch_coverage = "100"
}

unittest("core") {
  validates = "//src/core:core@core"
  sources = [ "//test/test-core.cpp" ]
  line_coverage = "100"
  branch_coverage = "100"
}

unittest("utils") {
  validates = "//src/utils:utils@utils"
  sources = [ "//test/test-utils.cpp" ]
  line_coverage = "100"
  branch_coverage = "100"
}

unittest_group("unittest") {
  deps = [
    ":core",
    ":drivers",
    ":init",
    ":io",
    ":main",
    ":utils",
  ]
}
