#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/outputs.gni")
import("//gn/actions/capture-output.gni")
import("//gn/toolchains/tools.gni")

template("description") {
    capture_output(target_name) {
        assert(defined(invoker.output), "'output' must be defined")

        ignore = ["output"]

        forward_variables_from(invoker, "*", ignore)

        script = gn_tool
        stdout = invoker.output
        args = [
            "desc",
            "${root_build_dir}",
            "//*",
            "--format=json",
            "--default-toolchain",
        ]

        inputs = ack_outputs
        deps = [
            "//gn:ack"
        ]

        outputs = [ stdout ]
        testonly = true
    }
}
